[tool.poetry]
name = "introduction-to-ml-with-python"
version = "0.1.0"
description = ""
authors = ["Yudai Konishi <8362436+yudai524@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "introduction_to_ml_with_python"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
notebook = "^6.5.4"
mglearn = "^0.2.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
ipython = "^8.14.0"
scikit-learn = "^1.2.2"
pillow = "^9.5.0"
nltk = "^3.8.1"
spacy = "^3.5.3"
graphviz = "^0.20.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
